--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,13 @@ orange claire: #ff6541
 orange sambre: #a94d3a
 */
 
+@font-face {
+    src: url('../fonts/MyriadPro-Regular.otf');
+    font-family:  "myriad";
+}
+*{
+    font-family:  "myriad";
+}
 .btn{
     border-radius: 1px ;
     border: solid 1px #4b4d54;
@@ -155,6 +162,10 @@ opacity: 1;
 border: none;
 box-shadow: unset;
 }
+.right-bar .content{
+    padding: 29pt;
+}
+
 .body{
     display: flex;
 }.show{
@@ -169,4 +180,7 @@ table.dataTable tbody tr {
 #example_wraper{
     width: 100%;
     padding-right: 2%;
+}
+.my-table{
+    width: 100%;
 }
