--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,9 @@ orange sambre: #a94d3a
     
     --orange-1: #ff6541;
     --orange-2: #a94d3a;
+
+    --fill-white :invert(.5) sepia(1) saturate(1) hue-rotate(-13deg) brightness(435%);
+    --fill-orange :invert(.5) sepia(1) saturate(29) hue-rotate(350deg);
   }
 @font-face {
     src: url('../fonts/MyriadPro-Regular.otf');
@@ -90,9 +93,7 @@ color: var(--orange-1);
 .full-width{
     width: 100%;
 }
-.txt{
-    color: var(--gray-1);
-}
+
 nav > .col-lg-1{
     max-width: 5.333333%!important;
 }
@@ -132,7 +133,7 @@ nav > .col-lg-1{
 }
 .navbar{
     padding-top: 13px;
-    padding-bottom: 13px;
+    padding-bottom: 8px;
 }
 nav .col-lg-2:last-child{
     color: white;
@@ -167,7 +168,7 @@ opacity: 1;
     padding-right: 4pt;
     display: flex;
 }
-.right-bar input{
+.right-bar input, .right-bar input:focus{
     background-color: transparent;
     border: none;
     width: 100%;
@@ -199,6 +200,9 @@ box-shadow: unset;
     font-family: "myriad-bold";
     color: var(--gray-1);
 }
+.lecteur-item p{
+    color: #8a8c90;
+}
 .body{
     display: flex;
 }
@@ -219,7 +223,7 @@ box-shadow: unset;
     display: block !important;
 }
 #example_wrapper #example_length,#example_wrapper #example_filter{
-    display: none !important;
+    /*display: none !important;*/
 }
 table.dataTable tbody tr {
     background-color: transparent !important;
@@ -240,7 +244,8 @@ table.dataTable thead th, table.dataTable thead td {
      border-bottom: unset !important; 
 }
 .my-table tr :hover{
-    background-color: var(--orange-1) !important;
+    color: var(--orange-1);
+    cursor: pointer;
 }
 .my-table th:first-child{
     width: 1px !important;
@@ -249,5 +254,85 @@ table.dataTable thead th, table.dataTable thead td {
     color: var(--orange-1);
 }
 .orange-icon{
-    filter: invert(.5) sepia(1) saturate(29) hue-rotate(350deg);
+    filter: var(--fill-orange);
+}
+.gray-icon{
+    filter: invert(.5) sepia(1) saturate(29) hue-rotate(150deg);
+}
+.navbar-dark .navbar-toggler {
+    border: none !important;
+}
+.navbar-dark .navbar-toggler img{
+    width: 20pt;
+    filter:var(--fill-white);
+}
+input.search-rond,input.search-rond:focus{
+    background: url('../icons/loop.svg') no-repeat;
+    background-position: left;
+    padding-left: 27pt;
+    height: 21px !important;
+    font-size: 12pt !important;
+    background-size: 11pt;
+    background-color: var(--gray-1);
+    border-radius: 31px;
+    background-position-x: 9pt;
+    padding-right: 11pt;
+    color: var(--gray-4) !important;
+    margin-top: -6px;
+    padding-top: 10pt;
+    padding-bottom: 10pt;
+}
+
+nav li.nav-item {
+    margin-right: 25pt;
+}
+
+nav li.nav-item:hover span {
+    color: white;
+}
+img{
+    transition: all ease 0.2s;
+}
+nav li.nav-item:hover img{
+    filter: var(--fill-white);
+}
+.nav-item.active span{
+    color: var(--orange-1);
+}
+.nav-item.active img{
+    filter: var(--fill-orange);
+}
+nav li.nav-item:last-child{
+    font-weight: bolder;
+    font-size: 12pt;
+    line-height: 1;
+}
+.collapse.show li.nav-item{
+    margin-top: 14pt;
+}
+
+ul.navbar-nav{
+   /* padding: 9pt 1pt 5pt 1pt;*/
+}
+.my-table tbody tr>td:first-child{
+    border: solid 1px;
+    padding: 0px;
+    text-align: center;
+    border-radius: 54%;
+    font-weight: bolder;
+    font-size: 13pt;    
+}
+img.download{
+    cursor: pointer;
+    margin-left: 40pt;
+    width: 20pt;
+}
+img.download:hover{
+    filter: unset;
+}
+
+@media (max-width: 990px) {
+    .sm-hid{
+        display: none;
+    }
 }
