actu mobile respo

--- a/assets/css/style-respo.css
+++ b/assets/css/style-respo.css
@@ -8,6 +8,9 @@
         width: 50px !important;
         height: 50px !important;
     }
+    .center-login{
+        margin-top: 12% !important;
+    }
 }
 
 /* just on web mode */
@@ -29,7 +32,10 @@
 }
 /* mode smartPhone */
 @media (min-width: 450px)  {
-    
+    .center-login{
+        margin-top: 12% !important;
+    }
+
 
  }
 
@@ -40,6 +46,35 @@
  .right-bar{
 display: none;
  }
+    .btn{
+        padding: 5pt 16pt !important;
+    }
+    .btn.rond {
+        background-color: transparent !important;
+        border-radius: 50%;
+        width: 22pt;
+        padding: 0px !important;
+        font-size: 24pt;
+        line-height: 0.9;
+        font-weight: 200;
+        font-family: myria;
+        border-color: var(--orange-1);
+    }
+    .head{
+        padding: 16pt !important;
+        padding-left: 4pt !important;
+    }
+    img.download {
+        cursor: pointer;
+        margin-left: 26pt;
+        width: 20pt;
+    }
+    .body-content-top .center {
+        padding: 0pt;
+    }
+    .panel{
+        padding: 2px 8pt !important;
+    }
 }
 
 @media screen and (max-height: 450px) {
